--- a/app/src/main/res/layout/activity_pop_up_personal_info.xml
+++ b/app/src/main/res/layout/activity_pop_up_personal_info.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -9,66 +8,70 @@
         android:id="@+id/Level"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
+
         <TextView
 
             android:id="@+id/religion_name"
-            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_margin="10dp"
-            android:text=""
-            android:textSize="18sp"
-            android:textColor="#626262"
-            android:textStyle="bold"
+            android:layout_weight="1"
+            android:descendantFocusability="blocksDescendants"
             android:gravity="center"
-            android:descendantFocusability="blocksDescendants"/>
+            android:text=""
+            android:textColor="#626262"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_below="@id/Level"
         android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/Level"
+        android:gravity="center"
         android:orientation="horizontal"
-        android:weightSum="2"
-        android:gravity="center">
+        android:weightSum="2">
+
         <NumberPicker
             android:id="@+id/picker"
-            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="180dp"
             android:layout_margin="10dp"
-            android:descendantFocusability="blocksDescendants"/>
+            android:layout_weight="1"
+            android:descendantFocusability="blocksDescendants" />
 
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/Button"
-        android:layout_below="@id/scroll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/scroll"
         android:orientation="horizontal"
         android:weightSum="2">
+
         <Button
             android:id="@+id/cancel"
-            android:layout_weight="1"
             android:layout_width="wrap_content"
-            android:text="বাতিল করুন"
-            android:textColor="#626262"
             android:layout_height="50dp"
             android:layout_margin="10dp"
-            android:descendantFocusability="blocksDescendants"/>
+            android:layout_weight="1"
+            android:descendantFocusability="blocksDescendants"
+            android:text="@string/registration_cancel_btn_text"
+            android:textColor="#626262" />
+
         <Button
             android:id="@+id/accept"
-            android:layout_weight="1"
             android:layout_width="wrap_content"
-            android:text="গ্রহণ করুন"
-            android:textColor="#626262"
             android:layout_height="50dp"
             android:layout_margin="10dp"
-            android:descendantFocusability="blocksDescendants"/>
+            android:layout_weight="1"
+            android:backgroundTint="@color/colorPrimary"
+            android:descendantFocusability="blocksDescendants"
+            android:text="@string/registration_accept_btn_text"
+            android:textColor="#FFFFFF" />
     </LinearLayout>
 </RelativeLayout>
