--- a/app/src/main/res/layout/profile_details_child_item.xml
+++ b/app/src/main/res/layout/profile_details_child_item.xml
@@ -9,19 +9,20 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/medium_margin"
         android:gravity="center"
         android:orientation="horizontal"
         android:paddingBottom="@dimen/smiley_icon_padding"
         android:paddingRight="@dimen/smiley_icon_padding"
         android:paddingTop="@dimen/smiley_icon_padding"
-        android:weightSum="9.5">
+        android:weightSum="2">
 
         <TextView
             android:id="@+id/titleTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/medium_margin"
-            android:layout_weight="4.5"
+            android:layout_marginLeft="@dimen/large_margin"
+            android:layout_weight="1"
             android:text=""
             android:textColor="@color/title_textview_item_color"
             android:textSize="@dimen/item_textsize"
@@ -32,19 +33,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/negative_large_margin"
-            android:layout_weight="4.5"
+            android:layout_weight="1"
             android:background="@android:color/transparent"
             android:text="সামান্য শারীরিক প্রতিবন্ধকতা(asdadadad ada dasd adad)"
             android:textColor="#00011F"
             android:textSize="@dimen/item_textsize"
             android:textStyle="normal" />
-        <ImageView
-            android:id="@+id/img_edit"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_weight=".5"
-            android:layout_gravity="top|right"
-            android:src="@drawable/editicon"/>
     </LinearLayout>
 
 
